--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,3 +6,7 @@
                     -webkit-text-fill-color: white;
                     font-size: 1.5rem;
           }
+          .footer a {
+                    text-decoration: none;
+                    -webkit-text-fill-color: blue;
+          }
