--- a/styles/hero.css
+++ b/styles/hero.css
@@ -32,9 +32,15 @@
     -webkit-text-fill-color: white;
     border: none;
     background-color: #2E2F34;
-    
 }
 .contact-us {
+    padding:1rem;
+    background-color: blue;
+    border:2px solid gold;
+    width: max-content;
+    color: white;
+}
+.contact-us a {
     padding:1rem;
     background-color: blue;
     border:2px solid gold;
